--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "date-fns": "^3.3.0",
     "ethers": "^5.7.2",
     "https-proxy-agent": "^7.0.4",
-    "socks-proxy-agent": "^8.0.2"
+    "socks-proxy-agent": "^8.0.2",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
